# ecommerce_projeto

ecommerce_backend/: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml  requisitos.txt
ecommerce_backend/app/: __init__.py
ecommerce_backend/app/core/: __init__.py
ecommerce_backend/app/core/decoradores/: __init__.py
ecommerce_backend/app/core/decoradores/validadores/: __init__.py  validador.py
ecommerce_backend/app/core/decoradores/validadores/erros/: __init__.py  nao_branco_validador_erro.py  nao_nulo_validador_erro.py
ecommerce_backend/app/core/erro/: __init__.py  api_erro.py  either.py
ecommerce_backend/app/core/erros/: __init__.py  api_error.py
ecommerce_backend/app/domain/: __init__.py
ecommerce_backend/app/domain/entidades/: __init__.py  cliente.py
ecommerce_backend/app/domain/vos/: __init__.py  nome.py
ecommerce_backend/tests/domain/entidades/: test_cliente.py
ecommerce_backend/tests/domain/vos/: test_nome.py
