[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["dejailson.pinheiro <dejailson.pinheiro@ifma.edu.br>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pylint = "^2.14.5"
black = "^22.6.0"
flake8 = "^5.0.2"
pre-commit = "^2.20.0"
autopep8 = "^1.7.0"
Faker = "^14.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
